Actualizacion con descarga de docker y solucion con /

--- a/ProyectoFinalRamosMaria/BackEnd/Dockerfile
+++ b/ProyectoFinalRamosMaria/BackEnd/Dockerfile
@@ -1,5 +1,5 @@
-FROM amazoncorretto:17-alpine-jdk
+FROM amazoncorretto:17
 MAINTAINER MariaRamos
-COPY target\RamosMaria-0.0.1-SNAPSHOT.jar  mariaramos-app.jar
+COPY target/RamosMaria-0.0.1-SNAPSHOT.jar  mariaramos-app.jar
 ENTRYPOINT ["java","-jar", "/mariaramos-app.jar"]
 EXPOSE 8080
